[gd_scene load_steps=4 format=2]

[ext_resource path="res://attacks/super_attack/sattack6/string_drawer.gd" type="Script" id=1]
[ext_resource path="res://attacks/super_attack/sattack6/attack.gd" type="Script" id=2]
[ext_resource path="res://custom_classes/periodic.gd" type="Script" id=3]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="string_drawer" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="healing" type="Timer" parent="."]
one_shot = true

[node name="Periodic" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="healing" to="." method="_on_healing_timeout"]
